@@ -1,0 +1,48 @@
+<!--
+Licensed to the Apache Software Foundation (ASF) under one or more
+contributor license agreements.  See the NOTICE file distributed with
+this work for additional information regarding copyright ownership.
+The ASF licenses this file to You under the Apache License, Version 2.0
+(the "License"); you may not use this file except in compliance with
+the License.  You may obtain a copy of the License at
+
+  http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+-->
+<assembly>
+    <id>standalone</id>
+    <formats>
+        <format>dir</format>
+    </formats>
+    <includeBaseDirectory>false</includeBaseDirectory>
+
+    <fileSets>
+        <fileSet>
+            <directory>features</directory>
+            <outputDirectory>/features</outputDirectory>
+            <includes>
+                <include>**/*.feature</include>
+            </includes>
+        </fileSet>
+        <fileSet>
+            <directory>../data</directory>
+            <outputDirectory>/data</outputDirectory>
+        </fileSet>
+    </fileSets>
+
+    <files>
+        <file>
+            <source>src/main/static/LICENSE</source>
+            <outputDirectory></outputDirectory>
+        </file>
+        <file>
+            <source>src/main/static/NOTICE</source>
+            <outputDirectory></outputDirectory>
+        </file>
+    </files>
+</assembly>
